Wed Feb  9 16:42:08 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* stemtest.pl handling of random input data improved:

	  o doesn't bother regenerating the random data every time.

	  o the seed is actually generated from the hostname, rather
	    than being hard-coded to 1.

	  o support for running the test with a specified seed

	  o some basic tests that the output is sensible

Wed Feb  9 14:52:54 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Rename all exception classes to have names ending in Error

Wed Feb  9 14:48:48 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added and implemented get_doc_data in OmEnquire

	* Now get msets and esets by return value rather than reference
	  argument.

Wed Feb  9 11:18:48 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed the header guards (now all caps, should be unique, and don't
	  start with underscores).

Tue Feb  8 20:04:34 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed prefix OM to Om in all class names.

Tue Feb  8 19:17:53 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

        * Changed OMMSet::max_weight to OMMSet::max_possible.
          Added OMMSet::max_attained, which is weight of top match, (not
          neccessarily top item in MSet)

        * Allow user to specify decision function for expand.

        * Also allow user to specify that query terms should not be returned
          by expand, by calling OMExpandOptions::use_query_terms().                       This does not yet work, however.

        * Add many code comments, and make doc++ stuff work better.

Tue Feb  8 19:13:43 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added some more tests.

Tue Feb  8 16:51:22 GMT 2000 Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed boolean only querying.

	  o) Made isbool get set correctly (was being unset by
	    initialise_from_copy)

	  o) Set max_weight correctly.
